force-app/main/default/objects/Weekly_Schedule__c/Weekly_Schedule__c.object-meta.xml
<CustomObject>
    <description>Stores the weekly planned hours, cost, and revenue for a resource assignment.</description>
    <label>Weekly Schedule</label>
    <nameField>
        <label>Weekly Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>