force-app/main/default/objects/Weekly_Schedule__c/fields/Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Planned_Revenue__c</fullName>
    <label>Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>