force-app/main/default/objects/Weekly_Schedule__c/fields/Resource_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Resource_Assignment__c</fullName>
    <label>Resource Assignment</label>
    <referenceTo>project_cloud__Resource_Assignment__c</referenceTo>
    <relationshipLabel>Weekly Schedules</relationshipLabel>
    <relationshipName>Weekly_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>